# pico_rover

./: .gitignore  LICENSE  README.md
rover/: CMakeLists.txt  FreeRTOSConfig.h  main.c
rover/lib/: CMakeLists.txt
rover/lib/dht11/: CMakeLists.txt  dht11.c  dht11.h
rover/lib/ldr/: CMakeLists.txt  ldr.c  ldr.h
rover/lib/movement/: CMakeLists.txt  movement.c  movement.h
rover/lib/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
rover/lib/rain/: CMakeLists.txt  rain.c  rain.h
rover/lib/remote_control/: CMakeLists.txt  remote_control.c  remote_control.h
rover/lib/ultrasonic/: CMakeLists.txt  ultrasonic.c  ultrasonic.h
rover/lib/wandering/: CMakeLists.txt  wandering.c  wandering.h
rover/lib/web/: CMakeLists.txt  cgi.h  lwipopts.h  web.h
rover/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
